# scripts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .streams_output.json  Pipfile  README.md  fcd  fpikaur  fv  fva  git-patch-push.sh  harvest-autocommits.sh  headphone_toggler.sh  nfb_config.ini  wl-copy  wynammBracket.py  wyngit.sh  ydotool_jimny_print.sh  ydotool_shift_rightclick.sh
Python/: paragraph_scraper.py
Shell/: seed_single_torrent.sh
jelly/: .dmypy.json  README.md  jelly.py  main.py  pyproject.toml  setup.py  tox.ini
modrinth_checker/: download_links_1.21.4.txt  main.py  missing_links_1.21.4.txt  mod_ids.txt  pyproject.toml
next_event/: .dmypy.json  main.py  next_event.py  pyproject.toml
podsync_xml_creator/: podsync_xml_creator.py  pyproject.toml
python/: Pipfile  boxing  bspwm_desktopnamer  bspwm_swallow  clue_days  contents.md  decorators.py  dustinoffthedegree  fbc_reminder.py  ff2mpv  gifmaker  lemonbar_4Gremaining.py  lemonbar_other_timezones.py  lemonbar_weather  markdownify_url.py  newsboat_webpage_screenshotter.py  nextevent  polybar_weather  reddit_banner.py  scienceorfictionscraper  sport_reminder.py  subdomains.md  todo_check  tulyp  umpv  umpv_audio  urltest.py  youtube_playlist_creator.py
python/youtube_playlist_creator/: README.md  config.ini  config.ini.example  pyproject.toml  token.json  video_cache.json  youtube_playlist_creator.py  yt_playlist_cache.json  yt_playlist_creator.json
rust/: 1point1_hello_world.rs  1point2_formatted_print.rs
shell/: AU_FB_names.sh  UK_FB_names.sh  add_podcast_item  batterybrightness  bspwm_desktopnamer.sh  bspwm_desktopnamer_subscriber.sh  bspwm_output_desktops.sh  bspwm_output_desktops_to_sxhkd.sh  bspwm_resize  cf  corona  fkill  (+44 more)
sport_reminder/: main.py  pyproject.toml  sport_reminder.py
youtube_playlist_aggrigator/: .dmypy.json  config.ini  main.py  pyproject.toml  token.json  video_cache.json
(+1218 files in other folders)
