[project]
name = "next-event"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "arrow>=1.3.0",
    "google>=3.0.0",
    "google-api-python-client>=2.167.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.1",
    "httplib2>=0.22.0",
    "humanize>=4.12.2",
    "loguru>=0.7.3",
    "refurb>=2.0.0",
    "regex>=2024.11.6",
    "rich>=14.0.0",
    "ujson>=5.10.0",
]
