[project]
name = "sport-reminder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "arrow>=1.3.0",
    "google>=3.0.0",
    "google-api-python-client>=2.167.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.1",
    "rich>=14.0.0",
    "ujson>=5.10.0",
]
