[project]
name = "youtube-playlist-aggrigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "pydantic>=2.11.4",
    "questionary>=2.1.0",
    "tenacity>=9.1.2",
    "thefuzz>=0.22.1",
    "tinydb>=4.8.2",
    "typer>=0.15.4",
]
