[project]
name = "youtube-playlist-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bowler>=0.9.0",
    "httpx>=0.27.2",
    "loguru>=0.7.2",
    "orjson>=3.10.11",
    "pydantic>=2.9.2",
    "pyupgrade>=3.19.0",
    "questionary>=2.0.1",
    "tenacity>=9.0.0",
    "thefuzz>=0.22.1",
    "tinydb>=4.8.2",
    "typer>=0.12.5",
]
